fix: different GC to be compatible with old java versions